sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value compt
  while (compt!=0){
         ^