sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  while (compt!=0){
    var compt= 0
    for (k<-0 to getNombreValeurs()-2){
      if (!plusPetit(k,k+1)){
        echange(k,k+1)
        compt=compt+1
      }
    }
    for (k<-getNombreValeurs()-2 to 0 by -1){
      if (!plusPetit(k,k+1)){
        echange(k,k+1)
        compt=compt+1
      }
    }
  }
}